# mini-rag

./: .env.example  .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
assets/: mini-rag-app.postman_collection.json
routes/: base.py
src/: .env.example  .gitignore  main.py  requirements.txt
src/assets/: mini-rag-app.postman_collection.json
src/controllers/: BaseController.py  DataController.py  ProcessController.py  ProjectController.py
src/docker/: docker-compose.yml
src/helpers/: config.py
src/models/: BaseDataModel.py  ChunkModel.py  ProjectModel.py
src/models/db_schemes/: data_chunk.py  project.py
src/models/enums/: DataBaseEnum.py  ResponseEnums.py
src/routes/: base.py  data.py
