[project]
name = "mini-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ahmed Belaaj", email = "ahmed-bellaaj@outlook.com"}
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.27",
    "uvicorn[standard]>=0.46.0",
]

[dependency-groups]
dev = [
    "commitizen>=4.13.9",
    "pre-commit>=4.5.1",
    "ruff>=0.15.9",
]
